@@ -1,3 +1,8 @@
+version <unreleased>
+
+Extractors
++ [niconico] Support login via cookies (#7968)
+
 version 2017.01.14
 
 Core
